@@ -1,3 +1,12 @@
+2005-01-25  Christopher Faylor  <cgf@timesys.com>
+
+	* pinfo.h (pinfo::init): Make third parameter non-optional and
+	propagate change throughout.
+	* pinfo.cc (set_myself): Pass INVALID_HANDLE_POINTER if h is NULL.
+	(pinfo::init): Make third parameter non-optional.  Eliminate use of
+	PID_EXECED as an argument.  Put setting of handle back inside loop but
+	reorganize to try to open it only when necessary.
+
 2005-01-25  Corinna Vinschen  <corinna@vinschen.de>
 
 	* cygwin.din: Export getpriority and setpriority.
